<resources>
    <string name="app_name">LatihanUTS</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="home">Home</string>
    <string name="daily">Daily Activity</string>
    <string name="music">Music and Video</string>
    <string name="gallery_photo">Gallery</string>
    <string name="about">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
</resources>
