<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_home"
          android:icon="@drawable/ic_home_black_24dp"
          android:title="@string/home"/>
    <item android:id="@+id/nav_daily"
        android:icon="@drawable/ic_whatshot_black_24dp"
        android:title="@string/daily"/>
    <item android:id="@+id/nav_gallery"
        android:icon="@drawable/ic_photo_library_black_24dp"
        android:title="@string/gallery_photo"/>
    <item android:id="@+id/nav_music"
        android:icon="@drawable/ic_library_music_black_24dp"
        android:title="@string/music"/>
    <item android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/about"/>



</menu>